Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/6476118/T6476118a.out
T6476118a.java:14:20: compiler.err.name.clash.same.erasure.no.override.1: class, B, compareTo, T6476118a.B, java.lang.Comparable, compareTo, java.lang.Object, T6476118a.A
1 error
